# authust

./: .env  .env_example  .gitignore  Cargo.toml  Makefile  docker-compose.yaml  init.sql  readme.md
src/: apps.rs  common.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  services.rs  usecases.rs
src/handlers/: api.rs
src/handlers/api/: roles.rs  users.rs
src/handlers/api/groups/: handlers.rs  views.rs
src/handlers/api/permissions/: handlers.rs  views.rs
src/handlers/api/roles/: handlers.rs  views.rs
src/handlers/system/: handlers.rs
src/storage/: postgres.rs
src/storage/postgres/: base.rs  group_repo.rs  permission_repo.rs  role_repo.rs  system.rs  user_repo.rs
src/usecases/: group.rs  permission.rs  roles.rs  user.rs  users.rs
src/usecases/group/: entities.rs  errors.rs  group_creator.rs  group_disabler.rs  group_get_item.rs  group_members_binder.rs  group_permissions_binder.rs
src/usecases/permission/: entities.rs  errors.rs  permission_creator.rs  permission_disabler.rs  permission_get_item.rs  permission_get_list.rs
src/usecases/roles/: entities.rs  errors.rs  role_creator.rs  role_disabler.rs  role_get_item.rs  role_members_binder.rs  role_permissions_binder.rs
src/usecases/user/: crypto.rs  entities.rs  errors.rs  get_user.rs  user_creator.rs
src/usecases/users/: crypto.rs  get_user.rs  user_creator.rs
tests/: constants.rs  test_api.rs  test_crypto.rs  test_groups.rs  test_permissions.rs  test_roles.rs  test_users.rs  utils.rs
tests/migrations/: V1__add_users.sql  V2__add_prems_and_groups copy.sql  V2__add_prems_and_groups.sql  V2__add_role_perms.sql  V3__add_group_members.sql  V3__add_role_members.sql  V3__add_roles_members.sql
