[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.79"

actix-web = "4.0.1"

deadpool-postgres = "0.10.0"
tokio-postgres = { version = "^0.7.5", features = ["with-chrono-0_4", "with-time-0_2"]}
actix-rt = "2.4.0"
actix-http = "3.0.0-beta.11"
async-trait = "0.1.51"

rust-argon2 = "1.0"
rand_core = { version = "0.6", features = ["std"] }

[dev-dependencies]
rstest = "0.12.0"
